--- a/rentabus.html
+++ b/rentabus.html
@@ -232,35 +232,6 @@
       background: #415a77;
     }
 
-    .newsletter-form {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-    }
-    .newsletter-form input {
-      flex: 1;
-      padding: 0.6rem;
-      border: 1px solid #415a77;
-      border-radius: 6px;
-      background: #1b263b;
-      color: #fff;
-    }
-    .newsletter-form input::placeholder {
-      color: #8d99ae;
-    }
-    .newsletter-form button {
-      background: #4da8da;
-      color: #fff;
-      border: none;
-      padding: 0.6rem 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .newsletter-form button:hover {
-      background: #1e90ff;
-    }
-
     .socials {
       margin-top: 1rem;
     }
@@ -283,31 +254,47 @@
       border-top: 1px solid #415a77;
       padding-top: 1rem;
     }
-    .phone-link {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #fff; /* si tu footer es azul */
-  text-decoration: none;
-}
 
-.phone-link:hover {
-  text-decoration: underline;
-  color: #ffdd57; /* un color contraste */
-}
+    .phone-link {
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #fff;
+      text-decoration: none;
+    }
+
+    .phone-link:hover {
+      text-decoration: underline;
+      color: #ffdd57;
+    }
 
     .hidden-link {
-  color: inherit;
-  text-decoration: none;
-  background: transparent;
-}
+      color: inherit;
+      text-decoration: none;
+      background: transparent;
+    }
 
-/* Evita cambios de color en visitado, hover o active */
-.hidden-link:visited,
-.hidden-link:hover,
-.hidden-link:active {
-  color: inherit;
-  text-decoration: none;
-}
+    .hidden-link:visited,
+    .hidden-link:hover,
+    .hidden-link:active {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    /* --- QR Uruguay Natural --- */
+    .uruguaynatural-qr {
+      display: block;
+      margin: 0.5rem auto 0;
+      height: 100px;
+      width: 100px;
+      border-radius: 10px;
+      transition: transform 0.3s ease, opacity 0.3s;
+      opacity: 0.95;
+    }
+
+    .uruguaynatural-qr:hover {
+      transform: scale(1.05);
+      opacity: 1;
+    }
   </style>
 
   <div class="footer-container">
@@ -318,14 +305,6 @@
       <p>Agencia de viajes con más de 20 años de experiencia.  
          Salidas desde San José hacia todo el país y el mundo.</p>
     </div>
-
-    <!-- Columna 2: Dirección -->
-    <div class="footer-col">
-      <h4>📍 Dirección</h4>
-      <p>San José de Mayo, Uruguay</p>
-      <a href="https://maps.google.com/?q=San+José+de+Mayo+Uruguay" target="_blank" class="btn-maps">Ver en mapa</a>
-    </div>
-
     <!-- Columna 3: Enlaces -->
     <div class="footer-col">
       <h4>Enlaces rápidos</h4>
@@ -338,23 +317,30 @@
       </ul>
     </div>
 
-    <!-- Columna 4: Newsletter -->
-<div class="footer-col">
-  <h4>📞 ¿Preferís hablar?</h4>
-  <p>Llamanos y te asesoramos al instante:</p>
-  <p><a href="tel:+59898765432" class="phone-link">+598 92 227 722</a></p>
-  
-  <div class="socials">
-    <a href="https://www.instagram.com/elturista.uy" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank"><i class="fab fa-facebook-f"></i></a>
-  </div>
-</div>
-
+    <!-- Columna 4: Contacto y redes -->
+    <div class="footer-col">
+      <h4>📞 ¿Preferís hablar?</h4>
+      <p>Llamanos y te asesoramos al instante:</p>
+      <p><a href="tel:+59898765432" class="phone-link">+598 92 227 722</a></p>
+      
+      <div class="socials">
+        <a href="https://www.instagram.com/elturista.uy" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      </div>
+    </div>
+    <!-- Columna 2: QR Uruguay Natural -->
+       <div class="footer-col" style="text-align:center;">
+      <a href="http://apps.mintur.gub.uy/operadores/operador.php?tipo=10&numero=738" target="_blank">
+        <img src="uruguaynatural.jpeg" alt="QR Uruguay Natural"
+        style="width:150px;height:auto">
+      </a>
+    </div>
   </div>
 
   <div class="footer-bottom">
-    © 2025 El Turista — San José • Diseñado por  <a class="hidden-link" href="https://tintin-18.github.io/portafoliopersonal">Agustin Espinosa</a>
-
+    © 2025 El Turista — San José • Diseñado por  
+    <a class="hidden-link" href="https://tintin-18.github.io/portafoliopersonal">Agustin Espinosa</a>
+  </div>
 </footer>
 
 <script>
