--- a/contacto.html
+++ b/contacto.html
@@ -342,17 +342,19 @@
       </ul>
     </div>
 
-    <!-- Columna 4: Contacto y redes -->
-    <div class="footer-col">
-      <h4>📞 ¿Preferís hablar?</h4>
-      <p>Llamanos y te asesoramos al instante:</p>
-      <p><a href="tel:+59892227722" class="phone-link">+598 92 227 722</a></p>
-      
-      <div class="socials">
-        <a href="https://www.instagram.com/elturista.uy" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      </div>
-    </div>
+<!-- Columna 4: Contacto y redes -->
+<div class="footer-col">
+  <h4>📞 ¿Preferís hablar?</h4>
+  <p>Llamanos y te asesoramos al instante:</p>
+  <p><a href="tel:+59892227722" class="phone-link">+598 92 227 722</a></p>
+  
+  <div class="socials" style="display: flex; justify-content: center; gap: 15px; font-size: 22px; margin-top: 10px;">
+    <a href="https://wa.me/59892227722" target="_blank" style="color: #25D366;"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://www.instagram.com/elturista.uy" target="_blank" style="color: #E1306C;"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=61580975551264" target="_blank" style="color: #1877F2;"><i class="fab fa-facebook-f"></i></a>
+  </div>
+</div>
+
     <!-- Columna 2: QR Uruguay Natural -->
        <div class="footer-col" style="text-align:center;">
       <a href="http://apps.mintur.gub.uy/operadores/operador.php?tipo=10&numero=738" target="_blank">
