--- a/destinos.html
+++ b/destinos.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Descubre todos los destinos turísticos que ofrece El Turista. Inspiración para tu próximo viaje desde San José." />
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     /* ------------------ Fade-in global ------------------ */
     .fade-in {
