--- a/index.html
+++ b/index.html
@@ -477,6 +477,7 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="script.js"></script>
+
 <!-- Modal inicial al cargar -->
 <div id="initialModal" style="
     display:none;
@@ -487,6 +488,29 @@
     align-items:center;
     z-index:99999;
 ">
+  <button id="closeModal" style="
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      background: rgba(255,255,255,0.9);
+      border: none;
+      border-radius: 50%;
+      width: 2rem;
+      height: 2rem;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #333;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background 0.2s, transform 0.2s;
+      z-index: 100000;
+  " onmouseover="this.style.background='white'; this.style.transform='scale(1.1)';"
+     onmouseout="this.style.background='rgba(255,255,255,0.9)'; this.style.transform='scale(1)';">
+    &times;
+  </button>
+
   <img src="azul.png" alt="Imagen inicial" style="
       max-width:80%;
       max-height:80%;
@@ -494,6 +518,8 @@
       box-shadow:0 4px 20px rgba(0,0,0,0.4);
   ">
 </div>
+
+
 
 <script>
   // Inicializar mapa centrado en Uruguay
@@ -506,6 +532,15 @@ const destinos = [
 ];
   destinos.forEach(d => {
     L.marker(d.coords).addTo(map).bindPopup(`<b>${d.name}</b><br>${d.info}`);
+  });
+      window.addEventListener('load', () => {
+    const modal = document.getElementById('initialModal');
+    modal.style.display = 'flex';
+  });
+
+  const closeBtn = document.getElementById('closeModal');
+  closeBtn.addEventListener('click', () => {
+    document.getElementById('initialModal').style.display = 'none';
   });
 </script>
 
